--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -21,7 +21,7 @@
 </head>
 <body>
     <div class="login-card">
-        <h1>Trading Analyzer Pro</h1>
+        <h1>Trading Analyzer Pro v2</h1>
         
         {% with messages = get_flashed_messages(with_categories=true) %}
           {% if messages %}
